@@ -4,6 +4,8 @@
 	- Add icon for reload, create, and new datasets
 	- os.path import added to commandinterface
 	- GPL() command works now
+	- function plotters can be set to plot only over a particular
+	range (patch by James Graham)
 	
 * 2005-06-11 Jeremy Sanders <jeremy@jeremysanders.net>
 	- Command line parsing now uses optparse (thanks to J Graham for
